--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: 16.x
 
     - name: Install dependencies
       run: npm install
@@ -35,3 +35,4 @@ jobs:
 
     - name: Cleanup
       run: rm -rf node_modules
+
